031 ==> 452103 - Custom keyboard shortcut definitions not persistent.
032 ==> 452323 - digiKam crash after importing photos.
033 ==> 452321 - digiKam Album date after migration from Picasa3.
034 ==> 122738 - Exiv2 needed to compile.
035 ==> 451868 - Crash while creating quality.
036 ==> 452578 - Cannot set correct image folder when configure.
037 ==> 452712 - Appimage for 7.6.0 will not run in Ubuntu 18.04.
038 ==> 452677 - The date is passed to iNaturalist in the wrong format.
039 ==> 452947 - From Batch Queue Manager metadata for lens auto-correction are not recognized.
040 ==> 452577 - Export to Pinterest function does not work and shows a message status:failure,code:11.
041 ==> 453181 - QMYSQL driver not loaded.
042 ==> 453231 - digiKam does not work anymore after upgrading to ubuntu 22.04.
043 ==> 453244 - 7.6.0 Appimage crashes on Ubuntu 22.04.
044 ==> 453249 - Face regions get lost when the file is renamed.
045 ==> 453418 - Color Profile Default Locations not Correct.
046 ==> 453516 - Crash on Inkscape svg file in Exiv2.
047 ==> 453611 - Showfoto main window freeze and crash at startup.
048 ==> 453617 - Add "Ignore face" button for unrecongised faces in thumbnail view.
049 ==> 453707 - Resizing and then ignoring recognised face ignores the original rectangle and resizes the rectangle for the suggested face.
050 ==> 453817 - digiKam does not detect hugin software as it is now provided as a flatpack, and no more as a classic ppa.
051 ==> 453905 - Network Mounts are not functional.
052 ==> 453888 - Exiftool display of a malformed tag.
053 ==> 453899 - Ccache not detected at digikam git compilation.
054 ==> 453417 - Color Management not working properly.
055 ==> 453965 - Showfoto crashed while parsing image metadata with Image Magick.
056 ==> 454090 - Prevent computer from sleeping after playing some videos.
057 ==> 362023 - Extremely slow metadata writing via maintenance.
058 ==> 454279 - Appimage not starting.
059 ==> 